--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "npm-run-all": "4.1.5",
     "stylelint": "16.21.1",
     "stylelint-config-standard": "38.0.0"
+  },
+  "dependencies": {
+    "@adobe/aem-cli": "^16.15.7"
   }
 }
