exposed AEM tags to UE Properties

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:json:models": "merge-json-cli -i \"models/_component-models.json\" -o \"component-models.json\"",
     "build:json:definitions": "merge-json-cli -i \"models/_component-definition.json\" -o \"component-definition.json\"",
     "build:json:filters": "merge-json-cli -i \"models/_component-filters.json\" -o \"component-filters.json\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "clear-cache":"node hlxAdmin.js cache"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
     "@babel/eslint-parser": "7.28.0",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.32.0",
@@ -38,6 +41,8 @@
     "stylelint-config-standard": "38.0.0"
   },
   "dependencies": {
-    "@adobe/aem-cli": "^16.15.7"
+    "@adobe/aem-cli": "^16.15.7",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3"
   }
 }
