robots.txt created,sitemap.yaml modified

--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -2,4 +2,4 @@ sitemaps:
   default:
     source: /query-index.json
     destination: /sitemap.xml
-    lastmod: YYYY-MM-DD
+    lastmod: YYYY-MM-DD HH:MM:SS
